akgfmaps 4.0.3 (February 14, 2025)
----------------------------------------------------------------

BUG FIX

- Fix bug caused by GDAL 3.10.1 not handling transformations for
  bbox class (issue #145).


akgfmaps 4.0.2 (January 22, 2025)
----------------------------------------------------------------

BUG FIX

- Fix bug in make_2d_grid() that was causing errors for certain
  combinations of inputs.

FUNCTIONALITY CHANGES

- generate_region_zip() writes to geopackages instead of shape-
  files.


akgfmaps 4.0.1 (January 7, 2025)
----------------------------------------------------------------

BUG FIX

- Change STATION fields to use GRID_X-GRID_Y-STRATUM naming
  convention.


akgfmaps 4.0.0 (January 3, 2025)
----------------------------------------------------------------

This major update replaces and updates shapefiles from multiple
bottom trawl survey regions and adopts standard field naming
conventions across regions. This update ensure consistency
across survey spatial products but breaks backwards
compatibility.

MAJOR CHANGES TO get_base_layers()

  - The function can retrieve layers for multiple regions at
    once, e.g.:
        get_base_layers(select.region = c("ebs", "ai"))
  - New design.year argument can retrieve layers for a specific
    survey design, such as the Gulf of Alaska survey design that
    was used from 1984-2023:
        get_base_layers(select.region = "goa", design.year = 1984)

    If not specified, returns the most recent design.
  - The use.survey.bathymetry argument in get_base_layers() is now
    deprecated because they are unnecessary now that EBS bathymetry
    files have been updated.
  - A legacy version of the function, get_base_layers_v3(), and
    associated shapefiles are provided temporarily as a bridge
    to help with backwards compatibility.
  - Column names for sf objects returned by the function have
    changed to match GAP_PRODUCTS and RACEBASE.
    - survey.area columns: